--- a/Relatório/Relatório.tex
+++ b/Relatório/Relatório.tex
@@ -46,7 +46,7 @@ Para a atividade do sensor potenciométrico, foi desenvolvido um pêndulo cujo e
 \caption{Estrutura do pêndulo}
 \label{fig:pendulo}
 \end{figure}
-onde $\theta$ é o ângulo de inclinação do pêndulo em relação a origem (linha tracejada) e $L$ é o comprimento do pêndulo. Para este experimento, foi utilizado o comprimento do pêndulo L=27.5cm(centímetro), medido com uma régua da Maped cuja resolução é de 0.1cm.
+onde $\theta$ é o ângulo de inclinação do pêndulo em relação a origem (linha tracejada) e $L$ é o comprimento do pêndulo. Para este experimento, foi utilizado o comprimento do pêndulo $L=27.5cm$(centímetro), medido com uma régua da Maped cuja resolução é de $0.1cm$.
 
 Este pêndulo pode ser modelado eletricamente pelo circuito da Figura \ref{fig:pendulo-equivalente}:
 
