Correção oq escvrevi

--- a/Relatório/Relatório.tex
+++ b/Relatório/Relatório.tex
@@ -656,7 +656,7 @@ Independente da resistência elétrica dos fios, considerando que a impedância 
 
 
 \section{Módulo Sensor LED}
-Feita a conexão dos fios  entre o sensor com a placa de aquisição DAQ, foi testado acionando os botôes que estão no painel frontal do diagrama mostrado na Figura \ref{fig:labview-led}. Foi verifado que o \textit{LED} vermelho acendia como estava esperado. Porém o \textit{LED} amarelo não acionou mesmo com botão do programa de LabVIEW ligado. Depois de algumas verificações, conclui-se que o \textit{LED} amarelo do sensor estava queimado devido ao uso indevido antes deste experimento.
+Baseada a metodologia mencioanda na seção 2.2.2, foi feita a conexão dos fios  entre o sensor \textit{LED} com a placa de aquisição DAQ. Testou-se acionando os botôes que estão no painel frontal do diagrama mostrado na Figura \ref{fig:labview-led}. Dessa forma, foi verifado que o \textit{LED} vermelho acendia como estava esperado. Porém o \textit{LED} amarelo não acionou mesmo com botão do programa de LabVIEW ligado. Depois de algumas verificações do sensor, conclui-se que o \textit{LED} amarelo do sensor estava queimado devido ao uso indevido antes deste experimento.
 
 
 
